@@ -226,6 +226,9 @@ CHANGES
 
 - dialects
 
+   - sqlite SLDate type will not erroneously render "microseconds" portion 
+     of a datetime or time object.
+     
    - MSSQL
       - PyODBC no longer has a global "set nocount on".
       - Fix non-identity integer PKs on autload [ticket:824]
